# claude_agent_sdk_test

./: .env.example  .gitignore  README.md  pyproject.toml  test_sdk.py
.claude/: settings.local.json
docs/: DIAGNOSTIC_REPORT.md  PERFORMANCE_OPTIMIZATION.md  SANDBOX_COMPARISON.md  SANDBOX_USAGE.md  SDK_SOURCE_CODE_ANALYSIS.md
docs/daytona/: Dockerfile  snapshot.sh
docs/pencil/: arch.pen
docs/scalebox/: 1.md
examples/: 01_basic_usage.py  01_basic_usage_verbose.py  02_custom_tools.py  03_async_streaming.py  04_optimized_for_deepseek.py  04_sandbox_execution.py  05_sandbox_api_server.py  06_daytona_sandbox_demo.py  06_daytona_standalone_demo.py  07_daytona_pty_claude_code.py
issues/: time_long.md
src/claude_agent_test/: __init__.py
src/claude_agent_test/sandbox/: __init__.py  base.py  config.py  daytona_sandbox.py  e2b_sandbox.py  executor.py  security.py  tool_proxy.py  types.py
tools/: performance_diagnostics.py  quick_test.py
ts-test/: package.json  pnpm-lock.yaml
ts-test/src/: 02_custom_tools.ts
